K1J-2196: use event timestamp when resending status updates (#1327)
* K1J-2196: use event timestamp when resending status updates

* K1J-2196: use resend message if it exists

* K1J-2196: assert that event timestamp is not null when publishing a new status update